--- a/src/app/features/lms/grp/components/underwriting/components/summary/summary.component.html
+++ b/src/app/features/lms/grp/components/underwriting/components/summary/summary.component.html
@@ -68,8 +68,8 @@
 
         <table class="centered-table">
             <tr>
-                <td style="text-align: right;"><span class="sa-premium">1200</span></td>&nbsp;&nbsp;
-                <td style="text-align: left;"><span class="sa-premium">300</span></td>
+                <td style="text-align: center;"><span class="sa-premium">1200</span></td>&nbsp;&nbsp;
+                <td style="text-align: center;"><span class="sa-premium">300</span></td>
             </tr>
             <tr>
                 <td><span class="text-typography">Sum assured</span></td>&nbsp;&nbsp;
