--- a/src/app/features/lms/grp/components/underwriting/components/underwriting/underwriting.component.css
+++ b/src/app/features/lms/grp/components/underwriting/components/underwriting/underwriting.component.css
@@ -1,4 +1,7 @@
-.main {}
+/* .main {
+    width: 1246px;
+    min-height: 318px;
+} */
 
 .container {
     width: 1216px;
@@ -33,9 +36,13 @@
 }
 
 .policy-button-container {
-    padding-right: 38px;
+    padding-right: 34px;
     padding-top: 8px;
 }
+
+.policy-button:hover {
+    background-color: #459fee;
+  }
 
 .quote-text {
     color: #000;
@@ -46,4 +53,22 @@
     font-style: normal;
     font-weight: 600;
     line-height: normal;
+}
+
+@media screen and (max-width: 800px) {
+    .main {
+        width: 100%;
+        height: 100%;
+    }
+    .container {
+        width: 100%;
+        min-height: 100%;
+        flex-shrink: 0;
+        border-radius: 5px;
+        background: #FFF;
+    }
+    .policy-button-container {
+        padding-right: 0px;
+        padding-top: 8px;
+    }
 }
