VQ-1167: Responsiveness for entity module

--- a/src/app/features/entities/components/entity/list-entity/list-entity.component.html
+++ b/src/app/features/entities/components/entity/list-entity/list-entity.component.html
@@ -79,7 +79,7 @@
             <td>{{ entity.categoryName }}</td>
             <td>
               <div class="actions">
-                <button type="button" class="btn btn-link" (click)="viewDetailsWithId(entity.id)">
+                <button type="button" class="btn btn-link text-primary" (click)="viewDetailsWithId(entity.id)">
                   <i class="pi pi-eye" style="padding: 0 2px 0 0;"> </i>view
                 </button>
               </div>
