--- a/src/app/features/base/components/header/header.component.html
+++ b/src/app/features/base/components/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-dark bg-primary base-navbar">
   <div class="container-fluid">
-      <a class="navbar-brand fadeInDown col-3" routerLink="./dashboard">
+      <a class="navbar-brand fadeInDown col-3">
           <button 
             class="navbar-toggler" 
             type="button" 
