--- a/src/app/features/entities/components/client/list-client/list-client.component.html
+++ b/src/app/features/entities/components/client/list-client/list-client.component.html
@@ -79,7 +79,7 @@
           <td>{{ client.clientType.clientTypeName | titlecase }}</td>
           <td>
             <div class="actions">
-              <button type="button" class="btn btn-link" (click)="viewDetailsWithId(client.id)">
+              <button type="button" class="btn btn-link text-primary" (click)="viewDetailsWithId(client.id)">
                 <i class="pi pi-eye" style="padding: 0 2px 0 0;"> </i>view
               </button>
             </div>
@@ -95,3 +95,4 @@
   </div>
 </div>
 
+<div class="mobile-bottom"></div>
