updates on Client Creation

--- a/src/app/features/lms/ind/components/quotation/components/insurance-history/insurance-history.component.html
+++ b/src/app/features/lms/ind/components/quotation/components/insurance-history/insurance-history.component.html
@@ -168,7 +168,7 @@
                                         ></i>
                                       </div>
                                       <div
-                                        (click)="cancelpolicyListOne(i)"
+                                        (click)="cancelPolicyListOne(i)"
                                         class="mx-2"
                                       >
                                         <i
@@ -201,7 +201,7 @@
                                         <!-- Edit Icon -->
                                       </div>
                                       <div
-                                        (click)="deletepolicyListOne(i)"
+                                        (click)="deletePolicyListOne(i)"
                                         class="mx-2"
                                       >
                                         <i
@@ -381,7 +381,7 @@
                                       ></i>
                                     </div>
                                     <div
-                                      (click)="cancelpolicyListTwo(i)"
+                                      (click)="cancelPolicyListTwo(i)"
                                       class="mx-2"
                                     >
                                       <i class="fa-solid fa-x text-danger"></i>
