--- a/src/app/features/setups/components/forms/components/lms-individual/lms-individual.component.html
+++ b/src/app/features/setups/components/forms/components/lms-individual/lms-individual.component.html
@@ -5,15 +5,16 @@
     <div class="container-fluid">
       <div class="full-border">
         <div class="d-flex justify-content-between">
-          <div class="fw-medium text-black pb-2">Module(s)</div>
+          <div class="fw-medium text-black pb-2">Module(s) <span class="mx-2 link" (click)="addForm()"><i class="fa-regular fa-square-plus"></i></span></div>
         </div>
         <div class="row">
           <ng-container *ngFor="let item of systemList; let i = index">
-            <div>
-              <div class="text-module fw-medium" (click)="selectModule(item)">
+            <div  style="padding:0.3rem 0">
+              <span class="text-module fw-medium"  (click)="selectModule(item)">
                 {{ i + 1 }}.
                 {{ item?.replaceAll("_", " ") || "NULL" | uppercase }}
-              </div>
+              </span>
+              <span class="mx-4 link" (click)="addForm()"> <i class="fa-solid fa-pen-to-square text-success fs-6"></i></span>
             </div>
           </ng-container>
         </div>
@@ -24,17 +25,19 @@
     <div class="container-fluid">
       <div class="full-border">
         <div class="d-flex justify-content-between">
-          <div class="fw-medium text-black">
+          <div class="fw-medium text-black" style="padding:0.2rem 0">
             {{ screenData["module"]?.replaceAll("_", " ") | titlecase }} Web
             Pages
+            <span class="mx-2 link" (click)="addForm()"><i class="fa-regular fa-square-plus"></i></span>
           </div>
         </div>
         <div class="row pb-2">
           <ng-container *ngFor="let item of moduleList; let i = index">
             <div>
-              <div class="text-module fw-medium" (click)="selectPage(item)">
+              <span class="text-module fw-medium" (click)="selectPage(item)">
                 {{ item?.replaceAll("_", " ") | titlecase }}
-              </div>
+              </span>
+              <span class="mx-4 link" (click)="addForm()"><i class="fa-solid fa-pen-to-square text-success fs-6"></i></span>
             </div>
           </ng-container>
         </div>
@@ -46,7 +49,7 @@
       <div class="full-border">
         <div class="d-flex justify-content-between">
           <div class="fw-medium text-black">
-            {{ screenData["module"]?.replaceAll("_", " ") | titlecase }} Form
+            {{ screenData["screen_name"]?.replaceAll("_", " ") | titlecase }} Form
             Setup(s) <span class="mx-2 link" (click)="addForm()"><i class="fa-regular fa-square-plus"></i></span>
           </div>
 
