--- a/src/app/features/gis/components/quotation/components/quotation-details/quotation-details.component.html
+++ b/src/app/features/gis/components/quotation/components/quotation-details/quotation-details.component.html
@@ -1,1 +1,278 @@
-<p>quotation-details works!</p>
+<div class="mx-4 mt-3">
+    <p class="title">Quotations:Quotation Details </p>
+    <app-stepper [currentStep]="2" [stepperData]="steps"></app-stepper>
+    <form [formGroup]="quotationForm">
+    <div class="card mb-4">
+        <div class="card-body">
+          <h6>Quotation Details </h6>
+          <div class="row mb-4 mt-3">
+            <div class="col-xl-4">
+                <label for=""class="quote-label">Source<span class="required" ></span></label>
+                <select id="status" class="form-select form-select-sm mb-1" id="quote-input"  formControlName="source"  placement="right" >
+                    <option selected="true" disabled="disabled"></option>
+                    <option value="10">Walk In </option>
+                    <option value="email">Email</option>
+                    <option value="broker">Broker/Agent</option>
+
+                  </select >
+
+            </div>
+            
+            <div class="col-xl-4">
+                <label for=""class="quote-label">Intermediary<span class="required"></span></label>
+                <select class="form-select form-select-sm mb-1" id="quote-input" (ngModelChange)="agentShortDesc($event)" formControlName="agentCode" placement="right" >
+                    <option selected="true" disabled="disabled"></option> 
+                    <option *ngFor="let data of agents"  [value]="data.id" >{{data.name}}</option>
+                </select> 
+            </div>
+            <div class="col-xl-4">
+                <label for=""class="quote-label">Branch<span class="required" ></span></label>
+                <select class="form-select form-select-sm mb-1" id="quote-input" formControlName="branchCode" placement="right" >
+                    <option selected="true" disabled="disabled"></option> 
+                    <option *ngFor="let data of branch"  [value]="data.id">{{data.name}}</option>
+                </select>  
+            </div>
+           
+          </div>
+          <div class="row mb-4">
+            <div class="col-xl-4">
+                <label for=""class="quote-label">Currency<span class="required"></span></label><br>
+                <p-dropdown formControlName="currencyCode" [options]="currency" optionLabel="name" placeholder=" " [filter]="true" ></p-dropdown>
+            </div>
+            <div class="col-xl-4">
+                <label for=""class="quote-label">Request for quote date</label>
+                <input type="date" id="quote-input" class="form-control form-control-sm mb-1" (change)="updateQuotationExpiryDate($event)" formControlName="RFQDate">
+            </div>
+            <div class="col-xl-4">
+                <label for=""class="quote-label">Quotation Expiry Date</label>
+                <input type="date" id="quote-input" class="form-control form-control-sm mb-1" formControlName="expiryDate">
+            </div>
+          
+           
+          </div>
+       
+         
+          <div class="collapse" id="collapseExample">
+           
+            <div class="row mb-4">
+                <div class="col-xl-4">
+                    <label for=""class="quote-label">Quotation Type</label>
+                    <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="proInterfaceType">
+
+                </div>
+                <div class="col-xl-4">
+                    <label for=""class="quote-label">Introducer</label>
+                    <select class="form-select form-select-sm mb-1" id="quote-input" formControlName="introducerCode" placement="right" >
+                        <option selected="true" disabled="disabled"></option> 
+                        <option *ngFor="let data of introducers"  [value]="data.code">{{data.surName}}</option>
+                    </select>  
+                </div>
+                <div class="col-xl-4">      
+                    <label for=""class="quote-label">Likelihood</label>
+                    <select id="status" class="form-select form-select-sm mb-1" id="quote-input"  placement="right"  >
+                        <option selected="true" disabled="disabled"></option>
+                        <option value="likely">Likely</option>
+                        <option value="unlikely">Unlikely</option>
+                        
+    
+                      </select >
+                </div>
+            </div>
+            <div class="row mb-4">
+                <div class="col-xl-4">
+                    <label for=""class="quote-label">Results from campaign?</label>
+                    <select id="status" class="form-select form-select-sm mb-1" id="quote-input"  placement="right"  >
+                        <option selected="true" disabled="disabled"></option>
+                        <option value="likely">Others</option>
+                        <option value="unlikely">Campaign</option>
+                        
+    
+                      </select >
+
+                </div>
+                <div class="col-xl-4">
+                    <label for=""class="quote-label">Multi-user entry?</label>
+                    <br>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="multiUser" formControlName="multiUser" id="inlineRadio1" value="Y">
+                        <label class="form-check-label" for="inlineRadio1">Yes</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="multiUser" formControlName="multiUser"  id="inlineRadio2" value="N">
+                        <label class="form-check-label" for="inlineRadio2">No</label>
+                      </div>
+                </div>
+                <div class="col-xl-4">
+                    <label for=""class="quote-label">Internal comments </label>
+                    <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="internalComments">
+                </div>
+            </div>
+            <div class="row mb-4">
+                <div class="col-xl-4">
+                    <label for=""class="quote-label">External comments </label>
+                    <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="comments">
+
+                </div>
+    
+ 
+              
+            </div>
+          </div>
+          <p class="more" (click)="show=!show" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">More Details <span class="ml-1" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample" > <i class="pi pi-angle-double-up" style="font-size:13px" *ngIf="!show" data-toggle="collapse" data-target="#collapseExample"></i><i class="pi pi-angle-double-down" style="font-size:13px" *ngIf="show" data-toggle="collapse" data-target="#collapseExample"></i></span> </p>
+        </div>
+    </div>
+    </form>
+    <div class="card mb-4">
+        <div class="card-body">
+          <h6>Product Details </h6>
+          <form [formGroup]="quotationForm">
+          <div class="row mt-3 mb-3">
+            <div class="col-xl-4">
+                <label for=""class="quote-label">Product</label>
+                <select class="form-select form-select-sm mb-1" id="quote-input" formControlName="productCode" (change)="getProductClause($event)" placement="right" >
+                    <option selected="true" disabled="disabled"></option> 
+                    <option *ngFor="let data of products" (click)="getProductClause(data.code)" [value]="data.code">{{data.description}}</option>
+                </select> 
+            </div>
+
+
+
+            <div class="col-xl-4">
+                <label for=""class="quote-label">Cover From</label><br>
+                <input type="date" id="quote-input" class="form-control form-control-sm mb-1" (change)="updateCoverToDate($event)" formControlName="withEffectiveFromDate">
+            </div>
+            <div class="col-xl-4">
+                <label for=""class="quote-label">Cover To</label><br>
+                <input type="date" id="quote-input" class="form-control form-control-sm mb-1" formControlName="withEffectiveToDate">
+            </div>
+          </div>
+          
+        </form>
+        </div>
+        <div class="card-body">
+            <p class="mb-4">Import risks <input type="checkbox" (change)="isChecked = !isChecked" id="importRisks" class="ml-3"></p>
+            
+            <p class="more" (click)="showProduct=!showProduct" data-bs-toggle="collapse" data-bs-target="#collapseProductClauses">Product Clauses<span class="ml-1" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample" > <i class="pi pi-angle-double-up" style="font-size:13px" *ngIf="!showProduct" data-toggle="collapse" data-target="#collapseExample"></i><i class="pi pi-angle-double-down" style="font-size:13px" *ngIf="showProduct" data-toggle="collapse" data-target="#collapseExample"></i></span> </p>
+            <div class="collapse" id="collapseProductClauses">
+                <p-table 
+                [value]="clauses"
+                dataKey="code" 
+              editMode="row" 
+              [tableStyle]="{'min-width': '50rem'}"
+              styleClass="p-datatable-sm"
+              responsiveLayout="scroll" 
+              class='ui-datatable'
+              [autoLayout]="true"
+              [paginator]="true"
+              [rows]="5"
+              [showCurrentPageReport]="true"
+              currentPageReportTemplate="{first} to {last} of {totalRecords}"
+              >
+                    <ng-template pTemplate="header">
+                        <tr>
+                            <th>Select</th>
+                            <th>Heading</th>
+                            <th>Wording</th>
+                            <th>Editable</th>
+                        </tr>
+                    </ng-template>
+                    <ng-template pTemplate="body" let-data let-editing="editing" let-ri="rowIndex">
+                        <tr [pEditableRow]="data">
+                            <td>
+                                <p-tableCheckbox [value]="data"></p-tableCheckbox>
+                            </td>
+                        
+                            <td  style=" white-space: nowrap;
+                            overflow: hidden;
+                            text-overflow: ellipsis;
+                            overflow-y: auto;
+                            max-width: 250px;">
+                            {{data.heading}}
+                            </td>
+                            <td style=" white-space: nowrap;
+                            overflow: hidden;
+                            text-overflow: ellipsis;
+                            max-width:300px;
+                            overflow-y: auto;">
+                                <p-cellEditor>
+                                    <ng-template pTemplate="input" *ngIf="data.is_editable  === 'Y'">
+                                        <textarea rows="5" cols="30" pInputTextarea   [(ngModel)]="data.wording" class="form-control form-control-sm" [ngModelOptions]="{standalone: true}"></textarea>
+                                    </ng-template>
+                                    <ng-template pTemplate="output">
+                                        {{data.wording}}
+                                    </ng-template>
+                                </p-cellEditor>
+                            </td>
+                            
+                          
+                            <td *ngIf="data.is_editable  !== 'Y'" style="padding-left: 24px;" > -- </td>
+                            <td *ngIf="data.is_editable  === 'Y'">
+                                <div class="flex align-items-center justify-content-center gap-2">
+                                    <button *ngIf="!editing" pButton pRipple type="button" pInitEditableRow  icon="pi pi-pencil" class="p-button-rounded p-button-text"></button>
+                                    <button *ngIf="editing" pButton pRipple (click)="editRow(data,data.code)" type="button" pSaveEditableRow icon="pi pi-check" class="p-button-rounded p-button-text p-button-success mr-2"></button>
+                                    <button *ngIf="editing" pButton pRipple type="button" pCancelEditableRow icon="pi pi-times" class="p-button-rounded p-button-text p-button-danger"></button>
+                                </div>
+                            </td>
+                        </tr>
+                    </ng-template>
+                </p-table>
+              </div>
+          </div>
+    </div>
+
+
+
+    <div class="float-end mb-4">
+        
+        <button class="btn btn-primary"  (click)="getExistingQuotations()" >Next</button>
+    </div>
+    
+    
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" >
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content" style="min-width:700px">
+                <div class="modal-body">
+                   <p class="title1 mb-4">Client's Already Existing Quotations</p>
+                   <p-table 
+                   [value]="quotation"
+                   [resizableColumns]="true" 
+                   styleClass="p-datatable-sm"
+                   styleClass="p-datatable-striped"
+                   class='ui-datatable' 
+                   [tableStyle]="{ 'min-width': '50rem' }"
+                   [scrollable]="true" scrollHeight="400px" >
+                       <ng-template pTemplate="header">
+                           <tr>
+                               <th>Quotation Number</th>
+                               <th>Status</th>
+                               <th>Cover From</th>
+                               <th>Cover To</th>
+                           </tr>
+                       </ng-template>
+                       <ng-template pTemplate="body" let-data>
+                           <tr>
+                               <td>{{data.no}}</td>
+                               <td>{{data.status}}</td>
+                               <td>{{data.coverFrom}}</td>
+                               <td>{{data.coverTo}}</td> 
+                           </tr>
+                       </ng-template>
+                   </p-table>
+
+                   <p class="title1 mt-4 float-start">Do you wish to Continue Creating the Quotation?</p>
+                   <div class="mt-3 float-end">
+                    <button class="btn btn-outline-primary" data-bs-dismiss="modal">No,I don't</button>
+                    <button class="btn btn-primary" style="margin-left: 10px;" data-bs-dismiss="modal" (click)="saveQuotationDetails()">Yes, continue</button>
+                   </div>
+                  </div>
+            </div>
+          </div>
+    </div>
+
+           
+              
+            
+        
+    
+       
+</div>
