--- a/src/app/features/lms/ind/components/quotation/components/personal-details/personal-details.component.html
+++ b/src/app/features/lms/ind/components/quotation/components/personal-details/personal-details.component.html
@@ -24,7 +24,13 @@
       </button>
     </div>
 
-    <div class="text-black p-3">
+    <div class="text-black px-3">
+      <div class="row" *ngIf="getFormControlsNameWithErrors.length>0">
+        <div class=" text-black fw-medium">List of required form(s)</div>
+        <div class="col-12 text-danger required" style="font-size: 11px; font-weight: 500;" *ngFor="let item of getFormControlsNameWithErrors">
+          {{item | uppercase}}
+        </div>
+      </div>
       <form>
         <div class="row">
           <div class="col-lg-4 col-md-6 col-sm-12">
@@ -42,6 +48,8 @@
                 </option>
               </ng-container>
             </select>
+            <div *ngIf="isRequired('clientType')" class="text-danger" style="font-size: 11px; font-weight: 500;">Client Type is required!</div>
+
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12">
             <label for="surname" class="required">Last Name</label>
@@ -86,6 +94,8 @@
               formControlName="idNumber"
               [id]="'idNumber'"
             />
+            <div *ngIf="isRequired('idNumber')" class="text-danger" style="font-size: 11px; font-weight: 500;">ID No. is required!</div>
+
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12">
             <label for="pinNo" class="required">Pin No.</label>
@@ -95,6 +105,8 @@
               formControlName="pinNumber"
               [id]="'pinNo'"
             />
+            <div *ngIf="isRequired('pinNumber')" class="text-danger" style="font-size: 11px; font-weight: 500;">Pin No. is required!</div>
+
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="w-100">
@@ -184,9 +196,11 @@
                     </option>
                   </ng-container>
                 </select>
+                <div *ngIf="isRequired('branch')" class="text-danger" style="font-size: 11px; font-weight: 500;">Branch is required!</div>
+
               </div>
               <div class="col-lg-4 col-md-6 col-sm-12">
-                <label for="title" class="required">Title</label>
+                <label for="title" >Title</label>
                 <select
                   class="form-select"
                   formControlName="title"
@@ -225,7 +239,7 @@
                 </select>
               </div>
               <div class="col-lg-4 col-md-6 col-sm-12">
-                <label for="phoneNumber" class="required">Telephone</label>
+                <label for="phoneNumber">Telephone</label>
                 <input
                   type="text"
                   class="form-control"
@@ -241,6 +255,8 @@
                   formControlName="emailAddress"
                   [id]="'email'"
                 />
+                <div *ngIf="isRequired('emailAddress')" class="text-danger" style="font-size: 11px; font-weight: 500;">email address is required!</div>
+
               </div>
               <div class="col-lg-4 col-md-6 col-sm-12">
                 <label for="p_contact_channel">Prefered Contact Channel</label>
@@ -317,6 +333,8 @@
                     </option>
                   </ng-container>
                 </select>
+                <div *ngIf="isRequired('country')" class="text-danger" style="font-size: 11px; font-weight: 500;">Country is required!</div>
+
               </div>
               <div class="col-lg-4 col-md-6 col-sm-12">
                 <label for="county">County</label>
@@ -520,7 +538,7 @@
                   class="form-select"
                   formControlName="bank"
                   [id]="'bank'"
-                  (click)="selectBank($event)"
+                  (change)="selectBankBranch($event)"
                 >
                   <option value="" disabled selected>Select Bank</option>
                   <ng-container *ngFor="let bank of bankList; trackBy: trackById">
@@ -532,12 +550,20 @@
               </div>
 
               <div class="col-lg-4 col-md-6 col-sm-12">
-                <label for="branch">Branch</label>
+                <label for="branch">Bank Branch</label>
+                <div
+                *ngIf="loadBankBranch"
+                class="spinner-border text-primary spinner-border-resize"
+                role="status"
+              >
+                <span class="visually-hidden">Loading...</span>
+              </div>
                 <select
                   class="form-select"
-                  formControlName="branch"
-                  [id]="'branch'"
+                  formControlName="bank_branch"
+                  [id]="'bank_branch'"
                 >
+                
                   <option value="" disabled selected>Select Branch</option>
                   <ng-container *ngFor="let bankBranch of bankBranchList; trackBy: trackById">
                     <option [value]="bankBranch['id']">
@@ -1290,211 +1316,6 @@
             </div>
           </ng-container>
          </div>
-
-
-          <!-- <div>
-            <div class="doc-file-notif">
-              <span>{{ "Medical History Bill" }}</span>
-              <span> {{ "40%" }}</span>
-            </div>
-            <div class="d-flex">
-              <div class="mr-4">
-                <svg
-                  *ngIf="true"
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="37"
-                  height="37"
-                  viewBox="0 0 32 32"
-                >
-                  <defs>
-                    <linearGradient
-                      id="vscodeIconsFileTypeExcel0"
-                      x1="4.494"
-                      x2="13.832"
-                      y1="-2092.086"
-                      y2="-2075.914"
-                      gradientTransform="translate(0 2100)"
-                      gradientUnits="userSpaceOnUse"
-                    >
-                      <stop offset="0" stop-color="#18884f" />
-                      <stop offset=".5" stop-color="#117e43" />
-                      <stop offset="1" stop-color="#0b6631" />
-                    </linearGradient>
-                  </defs>
-                  <path
-                    fill="#185c37"
-                    d="M19.581 15.35L8.512 13.4v14.409A1.192 1.192 0 0 0 9.705 29h19.1A1.192 1.192 0 0 0 30 27.809V22.5Z"
-                  />
-                  <path
-                    fill="#21a366"
-                    d="M19.581 3H9.705a1.192 1.192 0 0 0-1.193 1.191V9.5L19.581 16l5.861 1.95L30 16V9.5Z"
-                  />
-                  <path fill="#107c41" d="M8.512 9.5h11.069V16H8.512Z" />
-                  <path
-                    d="M16.434 8.2H8.512v16.25h7.922a1.2 1.2 0 0 0 1.194-1.191V9.391A1.2 1.2 0 0 0 16.434 8.2Z"
-                    opacity=".1"
-                  />
-                  <path
-                    d="M15.783 8.85H8.512V25.1h7.271a1.2 1.2 0 0 0 1.194-1.191V10.041a1.2 1.2 0 0 0-1.194-1.191Z"
-                    opacity=".2"
-                  />
-                  <path
-                    d="M15.783 8.85H8.512V23.8h7.271a1.2 1.2 0 0 0 1.194-1.191V10.041a1.2 1.2 0 0 0-1.194-1.191Z"
-                    opacity=".2"
-                  />
-                  <path
-                    d="M15.132 8.85h-6.62V23.8h6.62a1.2 1.2 0 0 0 1.194-1.191V10.041a1.2 1.2 0 0 0-1.194-1.191Z"
-                    opacity=".2"
-                  />
-                  <path
-                    fill="url(#vscodeIconsFileTypeExcel0)"
-                    d="M3.194 8.85h11.938a1.193 1.193 0 0 1 1.194 1.191v11.918a1.193 1.193 0 0 1-1.194 1.191H3.194A1.192 1.192 0 0 1 2 21.959V10.041A1.192 1.192 0 0 1 3.194 8.85Z"
-                  />
-                  <path
-                    fill="#fff"
-                    d="m5.7 19.873l2.511-3.884l-2.3-3.862h1.847L9.013 14.6c.116.234.2.408.238.524h.017c.082-.188.169-.369.26-.546l1.342-2.447h1.7l-2.359 3.84l2.419 3.905h-1.809l-1.45-2.711A2.355 2.355 0 0 1 9.2 16.8h-.024a1.688 1.688 0 0 1-.168.351l-1.493 2.722Z"
-                  />
-                  <path
-                    fill="#33c481"
-                    d="M28.806 3h-9.225v6.5H30V4.191A1.192 1.192 0 0 0 28.806 3Z"
-                  />
-                  <path fill="#107c41" d="M19.581 16H30v6.5H19.581Z" />
-                </svg>
-
-                <svg
-                  *ngIf="false"
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="37"
-                  height="37"
-                  viewBox="0 0 32 32"
-                >
-                  <defs>
-                    <linearGradient
-                      id="vscodeIconsFileTypeExcel0"
-                      x1="4.494"
-                      x2="13.832"
-                      y1="-2092.086"
-                      y2="-2075.914"
-                      gradientTransform="translate(0 2100)"
-                      gradientUnits="userSpaceOnUse"
-                    >
-                      <stop offset="0" stop-color="#18884f" />
-                      <stop offset=".5" stop-color="#117e43" />
-                      <stop offset="1" stop-color="#0b6631" />
-                    </linearGradient>
-                  </defs>
-                  <path
-                    fill="#185c37"
-                    d="M19.581 15.35L8.512 13.4v14.409A1.192 1.192 0 0 0 9.705 29h19.1A1.192 1.192 0 0 0 30 27.809V22.5Z"
-                  />
-                  <path
-                    fill="#21a366"
-                    d="M19.581 3H9.705a1.192 1.192 0 0 0-1.193 1.191V9.5L19.581 16l5.861 1.95L30 16V9.5Z"
-                  />
-                  <path fill="#107c41" d="M8.512 9.5h11.069V16H8.512Z" />
-                  <path
-                    d="M16.434 8.2H8.512v16.25h7.922a1.2 1.2 0 0 0 1.194-1.191V9.391A1.2 1.2 0 0 0 16.434 8.2Z"
-                    opacity=".1"
-                  />
-                  <path
-                    d="M15.783 8.85H8.512V25.1h7.271a1.2 1.2 0 0 0 1.194-1.191V10.041a1.2 1.2 0 0 0-1.194-1.191Z"
-                    opacity=".2"
-                  />
-                  <path
-                    d="M15.783 8.85H8.512V23.8h7.271a1.2 1.2 0 0 0 1.194-1.191V10.041a1.2 1.2 0 0 0-1.194-1.191Z"
-                    opacity=".2"
-                  />
-                  <path
-                    d="M15.132 8.85h-6.62V23.8h6.62a1.2 1.2 0 0 0 1.194-1.191V10.041a1.2 1.2 0 0 0-1.194-1.191Z"
-                    opacity=".2"
-                  />
-                  <path
-                    fill="url(#vscodeIconsFileTypeExcel0)"
-                    d="M3.194 8.85h11.938a1.193 1.193 0 0 1 1.194 1.191v11.918a1.193 1.193 0 0 1-1.194 1.191H3.194A1.192 1.192 0 0 1 2 21.959V10.041A1.192 1.192 0 0 1 3.194 8.85Z"
-                  />
-                  <path
-                    fill="#fff"
-                    d="m5.7 19.873l2.511-3.884l-2.3-3.862h1.847L9.013 14.6c.116.234.2.408.238.524h.017c.082-.188.169-.369.26-.546l1.342-2.447h1.7l-2.359 3.84l2.419 3.905h-1.809l-1.45-2.711A2.355 2.355 0 0 1 9.2 16.8h-.024a1.688 1.688 0 0 1-.168.351l-1.493 2.722Z"
-                  />
-                  <path
-                    fill="#33c481"
-                    d="M28.806 3h-9.225v6.5H30V4.191A1.192 1.192 0 0 0 28.806 3Z"
-                  />
-                  <path fill="#107c41" d="M19.581 16H30v6.5H19.581Z" />
-                </svg>
-              </div>
-              <div class="col-lg-4 col-md-6 col-sm-10 mt-3 mx-2">
-                <div
-                  class="progress"
-                  role="progressbar"
-                  aria-label="Example 1px high"
-                  aria-valuenow="25"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                  style="height: 3px; color: green"
-                >
-                  <div
-                    class="progress-bar"
-                    style="width: 30%; background-color: green"
-                  ></div>
-                </div>
-              </div>
-              <div class="col-2 mt-1 mx-2">
-                <i class="fas fa-trash-alt text-danger"></i>
-              </div>
-            </div>
-          </div>
-
-          <div>
-            <div class="doc-file-notif">
-              <span>{{ "International Id card" }}</span>
-              <span> {{ "60%" }}</span>
-            </div>
-            <div class="d-flex">
-              <div class="mr-4">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="37"
-                  height="37"
-                  viewBox="0 0 24 24"
-                >
-                  <path
-                    fill="#0f52ba"
-                    d="M19 2H5a3.009 3.009 0 0 0-3 3v8.86l3.88-3.88a3.075 3.075 0 0 1 4.24 0l2.871 2.887l.888-.888a3.008 3.008 0 0 1 4.242 0L22 15.86V5a3.009 3.009 0 0 0-3-3z"
-                    opacity=".5"
-                  />
-                  <path
-                    fill="#0f52ba"
-                    d="M10.12 9.98a3.075 3.075 0 0 0-4.24 0L2 13.86V19a3.009 3.009 0 0 0 3 3h14a3 3 0 0 0 2.16-.92L10.12 9.98z"
-                  />
-                  <path
-                    fill="#0f52ba"
-                    d="m22 15.858l-3.879-3.879a3.008 3.008 0 0 0-4.242 0l-.888.888l8.165 8.209c.542-.555.845-1.3.844-2.076v-3.142z"
-                    opacity=".25"
-                  />
-                </svg>
-              </div>
-              <div class="col-lg-4 col-md-6 col-sm-10 mt-3 mx-2">
-                <div
-                  class="progress"
-                  role="progressbar"
-                  aria-label="Example 1px high"
-                  aria-valuenow="25"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                  style="height: 3px; color: green"
-                >
-                  <div
-                    class="progress-bar"
-                    style="width: 70%; background-color: green"
-                  ></div>
-                </div>
-              </div>
-              <div class="col-2 mt-1 mx-2">
-                <i class="fas fa-trash-alt text-danger"></i>
-              </div>
-            </div>
-          </div> -->
         </div>
         <div></div>
       </div>
@@ -1546,8 +1367,10 @@
     <button
       style="padding: 0.6em"
       type="button"
-      class="btn btn-primary btn-sm"
+      [ngClass]="{'btn-danger': clientDetailsForm.invalid, 'btn-primary': !clientDetailsForm.invalid}"
+      class="btn btn-sm"
       (click)="nextPage()"
+      
     >
       Continue
       <!-- &nbsp;&nbsp;<i class="fa-solid fa-arrow-right"></i> -->
