--- a/src/app/features/lms/grp/components/policy/components/policy-summary/policy-summary.component.css
+++ b/src/app/features/lms/grp/components/policy/components/policy-summary/policy-summary.component.css
@@ -1,3 +1,18 @@
+* {
+  /* for every element */
+  font-family: Roboto;
+  font-style: normal;
+  /* font-size: 16px; */
+}
+.main {}
+
+.container {
+    width: 1216px;
+    min-height: 785px;
+    flex-shrink: 0;
+    border-radius: 5px;
+    background: #FFF;
+}
 .view-more-link {
   cursor: pointer;
   color: #00529B;
@@ -44,4 +59,8 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+}
+
+#table-alignment {
+  padding-left: 10px;
 }
